--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <title>팽이초콜릿</title>
 
   <!-- ✅ 검색엔진 최적화 메타태그 -->
-  <meta name="title" content="팽이는 우리가 함께 돌려야 더 재밌어" />
-  <meta name="description" content="팽이초콜릿 - 팽이는 우리가 함께 돌려야 더 재밌어" />
-  <meta name="keywords" content="팽이초콜릿 - 팽이는 우리가 함께 돌려야 더 재밌어" />
+  <meta name="title" content="좋은 제품을 좋은 가격에" />
+  <meta name="description" content="팽이초콜릿 - 좋은 제품을 좋은 가격에" />
+  <meta name="keywords" content="팽이초콜릿 - 좋은 제품을 좋은 가격에" />
   <meta name="author" content="팽이초콜릿" />
   <meta name="robots" content="index, follow" />
 
@@ -165,7 +165,7 @@
       setTimeout(function() {
         document.getElementById("loading").style.display = "none";
         document.getElementById("main").style.display = "block";
-      }, 700); // ✅ 초기 진입시 0.7초 후 메인화면
+      }, 3000); // ✅ 초기 진입시 0.7초 후 메인화면
     } else if (actionType === 'navigate') {
       setTimeout(function() {
         window.location.replace(url); // ✅ 새 페이지로 이동
