--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
       }, 1500); // ✅ 초기 진입시 1.5초 후 메인화면
     } else if (actionType === 'navigate') {
       setTimeout(function() {
-        window.location.replace(url); // ✅ 새 페이지로 이동
+        window.location.href = url; // ✅ 새 페이지로 이동
       }, 700); // ✅ 버튼 클릭시 0.7초 후 이동
     }
   }
