--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
 <div id="main" style="display:none;">
   <div class="container">
     <img class="main-image" src="/images/main.jpg" alt="팽이초콜릿 메인" />
-<a href="#" class="button enter-button" onclick="delayedRedirect('https://app.pang2chocolate.com')"></a>
-<a href="#" class="button suggest-button" onclick="delayedRedirect('https://tally.so/r/w5O556')"></a>
+    <a href="#" class="button enter-button" onclick="showLoadingAndAction('navigate', 'https://app.pang2chocolate.com')"></a>
+    <a href="#" class="button suggest-button" onclick="showLoadingAndAction('navigate', 'https://tally.so/r/w5O556')"></a>
   </div>
 </div>
 
@@ -163,9 +163,9 @@
 
     if (actionType === 'init') {
       setTimeout(function() {
-        document.getElementById("loading").style.display = "flex";
-        document.getElementById("main").style.display = "none";
-      }, 2000); // ✅ 초기 진입시 2.0초 후 메인화면
+        document.getElementById("loading").style.display = "none";
+        document.getElementById("main").style.display = "block";
+      }, 700); // ✅ 초기 진입시 0.7초 후 메인화면
     } else if (actionType === 'navigate') {
       setTimeout(function() {
         window.location.replace(url); // ✅ 새 페이지로 이동
@@ -178,8 +178,5 @@
   });
 </script>
 
-
-
-  
 </body>
 </html>
