--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <title>팽이초콜릿</title>
 
   <!-- ✅ 검색엔진 최적화 메타태그 -->
-  <meta name="title" content="팽이는 우리가 함께 돌려야 더 재밌어" />
-  <meta name="description" content="팽이초콜릿 - 팽이는 우리가 함께 돌려야 더 재밌어" />
-  <meta name="keywords" content="팽이초콜릿 - 팽이는 우리가 함께 돌려야 더 재밌어" />
+  <meta name="title" content="좋은 제품을 좋은 가격에" />
+  <meta name="description" content="팽이초콜릿 - 좋은 제품을 좋은 가격에" />
+  <meta name="keywords" content="팽이초콜릿 - 좋은 제품을 좋은 가격에" />
   <meta name="author" content="팽이초콜릿" />
   <meta name="robots" content="index, follow" />
 
