--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     background-color: transparent;
     animation: bounce 2s infinite ease-in-out;
     transition: transform 0.1s ease, filter 0.1s ease;
-    aspect-ratio: 1/1;
+    aspect-ratio: 1 / 1;
     -webkit-tap-highlight-color: transparent;
     outline: none;
     user-select: none;
@@ -87,8 +87,8 @@
 <div id="main" style="display:none;">
   <div class="container">
     <img class="main-image" src="/images/main.jpg" alt="팽이초콜릿 메인" />
-    <a href="https://app.pang2chocolate.com" class="button enter-button" onclick="return showLoading();"></a>
-    <a href="https://tally.so/r/w5O556" class="button suggest-button" onclick="return showLoading();"></a>
+    <a href="https://app.pang2chocolate.com" class="button enter-button"></a>
+    <a href="https://tally.so/r/w5O556" class="button suggest-button"></a>
   </div>
 </div>
 
@@ -97,26 +97,17 @@
   팽이초콜릿 - 좋은제품을 좋은가격에
 </div>
 
-<!-- ✅ 스크립트 통합 -->
+<!-- ✅ 스크립트 -->
 <script>
-function showLoading() {
-  document.getElementById("loading").style.display = "flex";
-  document.getElementById("main").style.display = "none";
-
-  return true; 
-  // ✅ 브라우저가 href를 기본 흐름으로 이동시킴
-}
-
-window.addEventListener("load", function() {
-  document.getElementById("loading").style.display = "flex";
-
-  setTimeout(function() {
-    document.getElementById("loading").style.display = "none";
-    document.getElementById("main").style.display = "block";
-  }, 2000); // 초기 진입 로딩
-});
+  // 초기 진입 시 로딩 화면 보여주고, 1.7초 뒤 메인 화면 전환
+  window.addEventListener("load", function() {
+    document.getElementById("loading").style.display = "flex";
+    setTimeout(function() {
+      document.getElementById("loading").style.display = "none";
+      document.getElementById("main").style.display = "block";
+    }, 1700);
+  });
 </script>
 
 </body>
 </html>
-
