--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>팽이초콜릿</title>
 
-  <!-- ✅ 메타 태그들 -->
+  <!-- ✅ 메타 태그 -->
   <meta name="title" content="좋은 제품을 좋은 가격에" />
   <meta name="description" content="팽이초콜릿 - 좋은 제품을 좋은 가격에" />
-  <meta name="keywords" content="팽이초콜릿 - 좋은 제품을 좋은 가격에" />
+  <meta name="keywords" content="팽이초콜릿, 좋은 제품, 좋은 가격" />
   <meta name="author" content="팽이초콜릿" />
   <meta name="robots" content="index, follow" />
   <link rel="manifest" href="/manifest.json?v=1">
@@ -26,8 +26,32 @@
 
 <style>
   body { margin: 0; padding: 0; }
+  
+  /* 📍 로딩 화면 */
+  #loading {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background: black;
+    opacity: 0;
+    transition: opacity 0.7s ease;
+  }
+  #loading.show {
+    opacity: 1;
+  }
+  #loading img {
+    width: 200px;
+  }
+
+  /* 📍 메인 화면 */
+  #main {
+    display: none;
+  }
+
   .container { position: relative; width: 100%; max-width: 1920px; margin: 0 auto; }
   .main-image { width: 100%; height: auto; display: block; }
+  
   .button {
     position: absolute;
     cursor: pointer;
@@ -55,6 +79,7 @@
     50% { transform: translateY(0); }
     70% { transform: translateY(-4px); }
   }
+
   @media screen and (max-width: 768px) {
     .enter-button { top: 63.1%; left: 11.5%; width: 30%; }
     .suggest-button { top: 63.1%; left: 59.3%; width: 30%; }
@@ -65,14 +90,6 @@
       70% { transform: translateY(-1px); }
     }
   }
-  #loading {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background: black;
-  }
-  #loading img { width: 200px; }
 </style>
 </head>
 
@@ -84,7 +101,7 @@
 </div>
 
 <!-- ✅ 메인 화면 -->
-<div id="main" style="display:none;">
+<div id="main">
   <div class="container">
     <img class="main-image" src="/images/main.jpg" alt="팽이초콜릿 메인" />
     <a href="https://app.pang2chocolate.com" class="button enter-button"></a>
@@ -99,13 +116,21 @@
 
 <!-- ✅ 스크립트 -->
 <script>
-  // 초기 진입 시 로딩 화면 보여주고, 1.7초 뒤 메인 화면 전환
   window.addEventListener("load", function() {
-    document.getElementById("loading").style.display = "flex";
+    const loading = document.getElementById("loading");
+    const main = document.getElementById("main");
+
+    // 📍 로딩 화면 서서히 나타나기
+    loading.classList.add('show');
+
     setTimeout(function() {
-      document.getElementById("loading").style.display = "none";
-      document.getElementById("main").style.display = "block";
-    }, 1700);
+      // 📍 2초 기다린 후 서서히 사라지기
+      loading.style.opacity = '0';
+      setTimeout(function() {
+        loading.style.display = 'none';
+        main.style.display = 'block';
+      }, 700); // fade-out 애니메이션 시간 (0.7초) 맞춰서
+    }, 2000); // 초기 로딩 대기 시간 (2초)
   });
 </script>
 
