--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
   <title>팽이초콜릿</title>
 
   <!-- ✅ 메타 태그 -->
-  <meta name="title" content="좋은 제품을 좋은 가격에" />
-  <meta name="description" content="팽이초콜릿 - 좋은 제품을 좋은 가격에" />
-  <meta name="keywords" content="팽이초콜릿, 좋은 제품, 좋은 가격" />
+  <meta name="title" content="좋은 제품, 좋은 가격, 좋은 문화" />
+  <meta name="description" content="팽이초콜릿 - 좋은 제품, 좋은 가격, 좋은 문화" />
+  <meta name="keywords" content="팽이초콜릿 - 좋은 제품, 좋은 가격, 좋은 문화" />
   <meta name="author" content="팽이초콜릿" />
   <meta name="robots" content="index, follow" />
   <link rel="manifest" href="/manifest.json?v=1">
   <meta name="theme-color" content="#000000">
   <meta property="og:title" content="팽이초콜릿" />
-  <meta property="og:description" content="팽이는 우리가 함께 돌려야 더 재밌어" />
+  <meta property="og:description" content="좋은 제품, 좋은 가격, 좋은 문화" />
   <meta property="og:image" content="/images/preview.jpg" />
   <meta property="og:url" content="https://www.pang2chocolate.com/" />
   <meta property="og:type" content="website" />
